--- a/binding/hotel.html
+++ b/binding/hotel.html
@@ -37,12 +37,50 @@
 </div>
 
 <div><button onClick="calc(); return false;">calculate</button></div>
-<div>
-  <input type="text" readonly id="sum" value="0" onmouseover="b(0,'sum')">
+<div>  
+  <textarea type="text" readonly id="sum" class="js_sum" value="" ></textarea>
 </div>    
 </form>   
 </body>
-<script src="my_script.js"> </script>
+<script> 
+  const pricing = {
+    "studio": 10,
+    "1bed": 15,
+    "2bed": 20
+  }
+  let model = {
+    startdate: "2020-02-20",
+    enddate: "2020-02-22",
+    room: "2bed",
+    sum: 30
+  }
+ 
+function mybinder(i, _string) {
+  
+  if(i)
+  {     
+    this[_string]=event.target.value;   
+      }
+  else 
+  {
+    event.target.value=this[_string];
+  }
+}
+  var b=mybinder.bind(model);
+ 
+  function calc() {
+   
+    if(model.startdate && model.enddate && model.room) {
+      const days = Math.round((new Date(model.enddate) - new Date(model.startdate))/(24*60*60*1000));      
+      if(pricing[model.room]) {
+        model.sum = pricing[model.room] * days;        
+      }
+      let str = "Стоимость "+ days +" дней в выбранном отеле стоит " +model.sum+" евро" ; 
+      sum.value=str;    
+    }  
+      
+  }
+</script>
 
 </body>
 </html>
